# LIGGGHTS_Flexible_Fibers

./: Dockerfile  README  README.md  index.html
Dockerfiles/nimbix/: Dockerfile
Dockerfiles/ubuntu_20.04/: Dockerfile
Dockerfiles/ubuntu_22.04/: Dockerfile
NAE/: AppDef.json
doc/: Section_commands.html  atom_style.html  bond_coeff.txt  bond_gran.html  bond_gran.txt  bond_style.html  bond_style.txt  buildSectionCommands.py  fix_airdrag.html  fix_airdrag.txt  fix_check_timestep_bond.html  fix_particletemplate_multiplespheres.html  gran_cohesion_sjkr.html  gran_cohesion_sjkr.txt  gran_cohesion_sjkr2.html  gran_cohesion_sjkr2.txt  index.html  mesh_module_servo.html
doc/libreoffice_math/: bond_gran_1.odf  fix_airdrag.odf
doc/wiki/: Home.md  _Sidebar.md  atom_modify.md  atom_style.md  bond_coeff.md  bond_gran.md  bond_harmonic.md  bond_style.md  commands.md  fix.md  fix_airdrag.md  fix_voidratio.md  how_to_install.md  how_to_install_linux.md  how_to_install_linux_ubuntu.md  how_to_install_mac.md  how_to_install_spack.md  how_to_install_windows.md  how_to_install_windows_native.md  how_to_install_windows_wsl.md  not_done_yet.md  tutorial_bond_doe_cantileverBeam.md  tutorial_bond_main.md  tutorial_bond_single_3PointBending.md  tutorial_bond_single_cantileverBeam.md  tutorial_bond_single_chuteWear.md  tutorial_bond_single_rockBreak.md  tutorial_bond_single_shearBox.md  tutorial_bond_single_uniaxialCompression.md  tutorial_jkr_main.md  tutorial_liggghts_chuteWear.md  tutorial_liggghts_main.md  tutorial_main_page.md
examples/BondPackage/MultipleSpheres/: Drum.STL  in.liggghts  log.liggghts  restart_forced_liggghts_10721.data  restart_forced_liggghts_1728.data  restart_forced_liggghts_17840.data  restart_forced_liggghts_20302.data  restart_forced_liggghts_26602.data  restart_forced_liggghts_9302.data
examples/BondPackage/MultipleSpheres/post/: dump10000.liggghts  dump100000.liggghts  dump105000.liggghts  dump110000.liggghts  dump115000.liggghts  dump120000.liggghts  dump125000.liggghts  dump130000.liggghts  dump135000.liggghts  dump140000.liggghts  dump145000.liggghts  dump15000.liggghts  dump150000.liggghts  dump155000.liggghts  dump160000.liggghts  dump165000.liggghts  dump170000.liggghts  dump175000.liggghts  dump180000.liggghts  dump185000.liggghts  dump190000.liggghts  dump195000.liggghts  dump20000.liggghts  dump200000.liggghts  dump205000.liggghts  dump210000.liggghts  dump215000.liggghts  dump220000.liggghts  dump225000.liggghts  dump230000.liggghts  dump235000.liggghts  dump240000.liggghts  dump245000.liggghts  dump25000.liggghts  dump250000.liggghts  dump30000.liggghts  dump35000.liggghts  dump40000.liggghts  dump45000.liggghts  dump5000.liggghts  (+17 more)
examples/BondPackage/Tutorials/DOCS/PowerPoint/: 3-Point_Bending.pptx  CantileverBeam.pptx  Simple_Sim.pptx  shear_cell.pptx
examples/BondPackage/Tutorials/DOE_Tests/cantilever_beam/: .gitignore  clean.sh  extractProperties.py  extract_properties.m  find_freq.m  get_results.m  in.liggghts  makeDOE.py  make_DOE.m  make_DOE_txt.m
examples/BondPackage/Tutorials/Single_Tests/: .gitignore  clean_all.sh  run_all.sh
examples/BondPackage/Tutorials/Single_Tests/3_point_bending/: .gitignore  Plunger_Part.STL  Rod_Part.STL  get_results.m  (+4 more)
examples/BondPackage/can_beam_wheat/: beam.csv  in.bonds  log.liggghts  read_data_file.txt
examples/BondPackage/can_beam_wheat/post/: dump100000.liggghts  dump1000000.liggghts  dump10000000.liggghts  dump10100000.liggghts  dump10200000.liggghts  dump10300000.liggghts  dump10400000.liggghts  dump10500000.liggghts  dump10600000.liggghts  dump10700000.liggghts  dump10800000.liggghts  dump10900000.liggghts  dump1100000.liggghts  dump11000000.liggghts  dump11100000.liggghts  dump11200000.liggghts  dump11300000.liggghts  dump11400000.liggghts  dump11500000.liggghts  dump11600000.liggghts  dump11700000.liggghts  dump11800000.liggghts  dump11900000.liggghts  dump1200000.liggghts  dump12000000.liggghts  dump12100000.liggghts  dump12200000.liggghts  dump12300000.liggghts  dump12400000.liggghts  dump12500000.liggghts  dump12600000.liggghts  dump12700000.liggghts  dump12800000.liggghts  dump12900000.liggghts  dump1300000.liggghts  dump13000000.liggghts  dump13100000.liggghts  dump13200000.liggghts  dump13300000.liggghts  dump13400000.liggghts  (+110 more)
examples/JKR/: .gitignore
examples/JKR/jkr_bounce/: in.bounce  post_process.py  run_case.sh
examples/JKR/jkr_bounce_cor_only/: in.bounce  post_process.py  run_case.sh
examples/JKR/jkr_tan/: in.sliding_friction_test  readme.txt  run_case.sh
examples/LIGGGHTS/LIGGGHTS_Tutorial/: README.md
examples/LIGGGHTS/Tutorials_public/: .gitignore
examples/LIGGGHTS/Tutorials_public/chute_wear_superquadric/: in.chute_wear
python/: .gitignore  install.py  liggghts.py
python/examples/: demo.py  simpExample.py
src/: .gitignore  CMakeLists.txt  PolynomialRootFinder.cpp  PolynomialRootFinder.h  atom.cpp  atom.h  atom_vec_bond_gran.cpp  atom_vec_bond_gran.h  balance.cpp  balance.h  bond.h  bond_gran.cpp  bond_gran.cpp.bak  bond_gran.h  bond_harmonic.cpp  bond_harmonic.h  bond_hybrid.cpp  cohesion_model_easo_capillary_viscous.h  compute_property_local.cpp  compute_property_local.h  domain.cpp  domain.h  finish.cpp  fix_airdrag.cpp  fix_airdrag.h  fix_balance.cpp  fix_balance.h  fix_bond_create_gran.cpp  fix_bond_create_gran.h  fix_bond_propagate_gran.cpp  fix_bond_propagate_gran.h  fix_cablerunning.cpp  fix_cablerunning.h  fix_cfd_coupling_force_implicit.cpp  fix_check_timestep_bond.cpp  fix_check_timestep_bond.h  fix_contact_history.cpp  fix_contact_history_mesh.cpp  fix_domain.cpp  fix_domain.h  (+49 more)
src/MAKE/: Makefile.debug
test_suite/: .gitignore  README.md  testAll.py
test_suite/3_point_bending/: truth.txt
test_suite/3_point_bending/run/: in.liggghts  results.py
test_suite/bond_break/: run.sh  truth.txt
test_suite/bond_break/run/: in.liggghts  results.py
test_suite/cantilever_beam/: run.sh  truth.txt
test_suite/cantilever_beam/run/: beam.csv  in.liggghts  results.py
test_suite/mpi_fiber_insert/: run.sh
test_suite/mpi_fiber_insert/run/: in.liggghts
(+41 files in other folders)
